# menza-cli

./: .gitignore  .pylintrc  README.md  README.md.backup  assignment.txt  clean.sh  install.sh  menza  menza.conf  menza.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.sh  setup.sh  uninstall.sh
res/test/: config_default.conf  config_full.conf  config_malformed_allergens.conf  config_no_default.conf  config_unknown.conf
scrips/: clean.sh  setup.sh  upload.sh
src/: click_test.py  clickargs.py  config.py  config_test.py  di.py
src/api/: agata_api.py  agata_api_impl.py  agata_api_mock.py  agata_api_test.py  agata_entity.py  lasta_api.py  lasta_api_impl.py  lasta_api_mock.py  lasta_api_test.py  lasta_entity.py
src/cli/: dish.py  dish_test.py  info.py  info_test.py  list.py  list_test.py  util.py  util_test.py  week.py  week_test.py
src/gui/: dish.py  info.py  key_handler.py  main.py  menu.py  rating.py  typing.py  week.py
src/menza_cli/: __main__.py  click_test.py  clickargs.py  config.py  config_test.py  di.py
src/menza_cli/api/: agata_api_impl.py  agata_api_test.py  agata_entity.py  lasta_api.py  lasta_api_impl.py  lasta_api_mock.py  lasta_api_test.py  lasta_entity.py
src/menza_cli/cli/: dish.py  info.py  info_test.py  list.py  util.py  util_test.py  week.py  week_test.py
src/menza_cli/gui/: dish.py  info.py  key_handler.py  main.py  menu.py  rating.py  week.py
src/menza_cli/repo/: repo.py  repo_impl.py  repo_test.py
src/repo/: repo.py  repo_impl.py  repo_test.py
