
[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "menza_cli"
version = "0.1.1"
authors = [
  { name="Petr Laštovička", email="krasik.peta@seznam.cz" },
]
description = "Dish menus for CTU cafeterias - nice CLI interface"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["menza", "cafeteria", "ctu", "cvut", "Prague", "cli"]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console :: Curses",
    "Framework :: Pytest",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Natural Language :: Czech",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
  "click>=8.1.3",
  "cryptography>=39.0.0",
  "pytest>=7.2.0",
  "requests>=2.28.1",
  "result>=0.9.0",
]

[project.urls]
"Homepage" = "https://github.com/Lastaapps/menza-cli"
"Bug Tracker" = "https://github.com/Lastaapps/menza-cli/issues"

[project.scripts]
menza = "menza_cli.__main__:main"

